--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2728,6 +2728,10 @@ Vertival margin, padding
   border-color: #fff;
 }
 
+.module {
+  padding: 70px 0px;
+}
+
 .module-title {
   font-size: 36px;
 }
@@ -2785,12 +2789,7 @@ Vertival margin, padding
     1px 1px 0 #000;
 }
 
-.low-padding {
-  padding-top: 70px;
-  padding-bottom: 90px;
-}
-
-.low-padding h2 {
+.route-module h2 {
   margin-bottom: 30px;
 }
 
